# corner-pocket-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b752f62926a5_init_schema_users_matches_games_.py  ea4c46d692f0_add_missing_fields_to_users_matches_.py
corner_pocket_backend/: main.py
corner_pocket_backend/api/: routes.py
corner_pocket_backend/api/v1/: auth.py  matches.py  stats.py
corner_pocket_backend/core/: config.py  db.py  exceptions.py  password.py  security.py
corner_pocket_backend/models/: __init__.py  approvals.py  base.py  games.py  matches.py  security.py  stats.py  users.py
corner_pocket_backend/schemas/: auth.py  common.py  stats.py
corner_pocket_backend/services/: __init__.py  games.py  matches.py  security.py  stats.py  users.py
docs/issues/: 001-tournament-feature.md  002-venues-feature.md
scripts/: README.md  create_issues.py  seed_db.py
tests/: test_health.py
tests/api/: __init__.py  conftest.py  test_auth.py  test_stat.py
tests/models/: test_approvals.py  test_games.py  test_matches.py  test_security.py  test_stat.py  test_users.py
tests/services/: conftest.py  test_games_db.py  test_matches_db.py  test_security_db.py  test_stats_db.py  test_users_db.py
